fix margin on "please log in" warning message
fixes CNVS-5039

test plan: go to any page that needs auth such as /courses/X when not
logged in. the "please log in" header shouldn't overlap with the "you
need to be logged in..." message.

Reviewed-on: https://gerrit.instructure.com/19211
QA-Review: Clare Hetherington <clare@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>
Product-Review: Brian Palmer <brianp@instructure.com>

--- a/app/stylesheets/login.sass
+++ b/app/stylesheets/login.sass
@@ -211,7 +211,7 @@ span.field-with-fancyplaceholder
       top: 15px
     h2
       height: 41px
-      margin: 0 0 -15px 0
+      margin: 0 0 -5px 0
       padding: 0 0 0 60px
       color: #000
     p
